# zotero-arxiv-daily

./: .gitignore  README.md  fetcher.py  mailer.py  main.py  mock_data.py  pyproject.toml  similarity.py  store.py  summarizer.py  web.py
.github/workflows/: main.yml
config/: base.yaml  custom.yaml
src/zotero_arxiv_daily/: construct_email.py  executor.py  protocol.py
templates/: email.html  index.html
