[project]
name = "arxiv-daily"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=4.0.0",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "pymupdf>=1.24.0",
    "sentence-transformers>=5.5.0",
    "socksio>=1.0.0",
]
